<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
   <TextView 
       android:id="@+id/borrow_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/borrow_title"
       android:hint="@string/borrow_title"
       android:layout_gravity="center"
       android:textSize="30dp"
       android:textColor="@color/Silver"
       android:layout_marginTop="10dp"/>
    
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <EditText
        android:id="@+id/name_field"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_field"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp" 
        
         />

       <Button
           android:id="@+id/contacts"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/contacts"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp" />
       
   </LinearLayout> 
   
  <EditText
        android:id="@+id/amount_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/amount"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        
        android:inputType="date"
        android:hint="@string/date_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/phone_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/phone" />

        
   

    <Button 
        android:id="@+id/borrow_btn"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/borrow_btn"
        android:background="@color/FireBrick"/>

</LinearLayout>

    </ScrollView>
