<?xml version="1.0" encoding="utf-8" ?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="401dp"
           
            android:orientation="vertical" >

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            
            android:layout_marginTop="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />
		<TextView
            android:id="@+id/bank_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/LightBlue"
            android:textSize="70dp"
            android:textStyle="bold" />

        <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/indianrs"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imageView"
        android:layout_gravity="center"/>
        
     
        <Button 
            android:id="@+id/withdraw"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/withdraw"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/Azure"/>

        <Button 
            android:id="@+id/deposit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/deposit"
            android:layout_gravity="center"
            android:background="@color/Azure"/>
        

    </LinearLayout>
        

    </ScrollView>
    