<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
   <TextView 
       android:id="@+id/accnt_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/acc_title"
       android:layout_marginTop="20dp"
       android:layout_gravity="center"
       android:textSize="30dp"
       android:textColor="@color/Silver"
       />
    
   
       <EditText
        android:id="@+id/accnt_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:ems="10"
        android:inputType="text"
        android:hint="@string/accnt_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp" 
        android:layout_marginRight="20dp"
        
         />
       
 
  <EditText
        android:id="@+id/accnt_balance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/accnt_bal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" />

        
   

    <Button 
        android:id="@+id/add_accnt"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/borrow_btn"
        android:background="@color/FireBrick"/>

</LinearLayout>

    </ScrollView>